# study-group

./: LICENSE  README.md  hello.py  pyproject.toml
groups/: apps.py  image_downloader.py  models.py  signals.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_remove_profile_profile_pics_profile_profile_picture.py  0003_remove_profile_profile_picture_and_more.py  0004_remove_profile_profile_picture_profile_avatar.py  0005_alter_profile_avatar.py
groups/static/styles/: main.css
groups/templates/: base.html
groups/templates/account/: login.html  logout.html  signup.html  verification_sent.html
groups/templates/allauth/elements/: field.html
groups/templates/groups/: index.html
groups/templates/groups/components/: navbar.html
groups/templates/socialaccount/: authentication_error.html  login.html
groups/templates/socialaccount/snippets/: login.html  provider_list.html
study_group/: asgi.py  settings.py  urls.py  wsgi.py
